<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/match_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/match_label" />

    <TextView
        android:id="@+id/match_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_toRightOf="@+id/match_label" />

    <Button
        android:id="@+id/select_file_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/match_name"
        android:layout_margin="10dp"
        android:text="@string/select_file_button" />

    <View
        android:id="@+id/after_file_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_below="@id/select_file_button"/>

    <TextView
        android:id="@+id/server_address_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/after_file_separator"
        android:layout_margin="10dp"
        android:text="@string/server_address_label" />

    <TextView
        android:id="@+id/server_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/server_address_label"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="20dp" />

    <Button
        android:id="@+id/edit_server_address_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/server_address"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/edit_server_address_button" />

    <View
        android:id="@+id/after_server_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_below="@id/edit_server_address_button"/>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/info_view_group"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/after_server_separator">

        <TextView
            android:id="@+id/info_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/info_label"/>

        <TextView
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/info_label"
            android:layout_margin="10dp"
            android:text="Some information here"/>

        <TextView
            android:id="@+id/error_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/info"
            android:text="@string/error_label"/>

        <TextView
            android:id="@+id/error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/error_label"
            android:layout_margin="10dp"
            android:text="Some error here"/>

        <View
            android:id="@+id/after_info_separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_below="@+id/error"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">
        <ToggleButton
            android:id="@+id/toggle_upload_service_button"
            android:layout_width="wrap_content"
            android:textOff="@string/toggle_button_off_text"
            android:textOn="@string/toggle_button_on_text"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="3"/>

        <Button
            android:id="@+id/exit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:text="@string/exit_button"/>
    </LinearLayout>
</RelativeLayout>