<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >


    <TextView
        android:id="@+id/enter_url_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:text="@string/enter_url_label" />

    <EditText
        android:id="@+id/url_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/enter_url_label"
        android:inputType="text"/>

    <TextView
        android:id="@+id/enter_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/url_edit_text"
        android:text="@string/enter_username_label" />

    <EditText
        android:id="@+id/username_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/enter_username"
        android:inputType="text" />
    <TextView
        android:id="@+id/enter_password_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/username_edit_text"
        android:text="@string/enter_password_label" />

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/enter_password_label"
        android:inputType="text" />
    <Button
        android:id="@+id/url_ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_edit_text"
        android:layout_alignRight="@+id/url_edit_text"
        android:text="@string/ok" />
    <Button
        android:id="@+id/url_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_edit_text"
        android:layout_toLeftOf="@+id/url_ok_button"
        android:text="@string/cancel" />
</RelativeLayout>