<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText3"
        android:layout_marginBottom="20dp"
        android:text="@string/enter_url_label" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:layout_centerInParent="true"/>
    <Button
        android:id="@+id/serverAddressOkButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText3"
        android:layout_alignRight="@+id/editText3"
        android:text="@string/ok" />
    <Button
        android:id="@+id/serverAddressCancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText3"
        android:layout_toLeftOf="@+id/serverAddressOkButton"
        android:text="@string/cancel" />
</RelativeLayout>